# spoor-poc

./: .gitignore
spoor/: .env.example  Cargo.toml  THIRD_PARTY_NOTICES.md
spoor/src/: browser_util.rs  cache_dir.rs  capture.rs  ir.rs  lib.rs  log.rs  main.rs  pipeline.rs  redact.rs  types.rs
spoor/src/classify/: api_origins.rs  filters.rs  graphql.rs  llm.rs  mod.rs  path_rules.rs  rest.rs
spoor/src/discover/: graphql.rs  mod.rs  rest.rs
spoor/src/export/: auth.rs  brief.rs  example_pick.rs  facets.rs  graphql.rs  mod.rs  openapi.rs  query_params.rs  trim.rs
spoor/src/path/: matching.rs  mod.rs  segments.rs
spoor/src/rest/: builder.rs  envelope.rs  error.rs  har_reader.rs  mod.rs  operation_id.rs  output.rs  params.rs  path_matching.rs  redact.rs  schema.rs  tag_rules.rs  type_hints.rs  types.rs
spoor/src/ui/: mod.rs  panel.html
spoor/tests/: pipeline.rs
spoor/tests/fixtures/: graphql_session.json  microservice_rest.json
