[package]
name = "spoor"
version = "0.1.1"
edition = "2024"
rust-version = "1.88"

[dependencies]
anyhow = "1.0.102"
axum = "0.8"
base64 = "0.22"
chromiumoxide = { version = "0.9", features = ["fetcher", "zip8", "rustls"] }
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.32"
globset = "0.4"
graphql-parser = "0.4"
regex = "1.12.4"
reqwest = { version = "0.13", features = ["json"] }
rust-embed = { version = "8", features = ["axum-ex"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml_ng = "0.10"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.8"
zip = "2"
